# sheet-music-accompaniment-app

./: .gitignore  README.ja.md  README.md  docker-compose.yml
backend/: Dockerfile  pyinstaller.spec  pyproject.toml
backend/app/: main.py  runtime_paths.py  schemas.py  server.py
backend/app/cache/: __init__.py  analyze_cache.py
backend/app/music/: accompaniment.py  fusion.py  merger.py  musicxml_concat.py  parser.py  solo_merger.py  solo_section_detector.py
backend/app/ocr/: tempo_ocr.py
backend/app/omr/: audiveris_runner.py  layout_parser.py  oemer_runner.py
backend/app/pdf/: __init__.py  solo_detector.py  splitter.py
backend/app/pipeline/: __init__.py  artifacts.py  breaker.py  contracts.py  controller.py  debug.py  full_run.py  params_loader.py  registry.py  run.py  scoring_facade.py  trials.py  validators.py
backend/params/: schema.json  v1_baseline.yaml  v2_staff_norm.yaml  v3_with_postprocess.yaml  v4_with_pitch.yaml  v5_real_pdf.yaml  v5_real_pdf_max_edits_6.yaml  v5_real_pdf_max_edits_8.yaml
backend/scripts/: refresh_golden_baseline.py
backend/tests/: test_accompaniment.py  test_analyze_cache.py  test_api_smoke.py  test_audiveris_launcher.py  test_musicxml_concat.py  test_parser.py  test_pdf_splitter.py  test_runtime_paths.py  test_server_entry.py  test_solo_detector.py  test_solo_merger.py  test_solo_section_detector.py  test_tempo_ocr.py  test_tesseract_config.py  test_time_signature.py  test_title_ocr_heuristics.py
backend/tests/pipeline/: test_analyze_e2e.py  (+41 more)
frontend/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
(+84 files in other folders)
